--- a/src/index.scss
+++ b/src/index.scss
@@ -117,6 +117,12 @@ body {
     }
   }
 
+  .gorilla-callout {
+    h5 {
+      font-size: $sidebar-font-size;
+    }
+  }
+
   .resize-bar {
     .resize-line {
       position: absolute; // this line is relative to resize bar
