added multuple filters, top bar search and breadcrumb

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 
 @import '@blueprintjs/table/lib/css/table.css';
 @import '@blueprintjs/datetime2/src/blueprint-datetime2.scss';
+@import '@blueprintjs/select/lib/css/blueprint-select.css';
 
 $main: #ffffff00;
 $primary: $blue4;
