--- a/src/index.scss
+++ b/src/index.scss
@@ -23,8 +23,14 @@ $input-border-color: #ffffff00;
 $main-white-color: rgba(143, 153, 168, 0.4);
 $main-white-color-hover: rgba(143, 153, 168, 0.2);
 
+html,
 body {
   background-color: $dark-gray2;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 * {
