--- a/src/index.scss
+++ b/src/index.scss
@@ -217,3 +217,12 @@ input {
 .float-button {
   @apply cursor-pointer fixed bottom-5 right-5 rounded-full w-10 h-10  bg-gray-400 border-[0.5px] border-solid border-white border-opacity-35 hover:scale-105 transition-transform transform active:scale-100 active:duration-75;
 }
+
+.custom-non-ideal-state {
+  .bp5-heading {
+    color: rgb(250 250 250) !important;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 200;
+  }
+}
