small device not suported alert completed

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @import './variables.scss';
-
+@import './small-device.scss';
 @import 'normalize.css/normalize.css';
 
 @import '@blueprintjs/core/lib/css/blueprint.css';
